--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,15 @@
+# Vagrant VM
 .vagrant
-server.pex
+
+# Compiled python modules.
+*.pyc
+
+# Setuptools distribution folder.
+/dist/
+
+# Python egg metadata, regenerated from source files by setuptools.
+/*.egg-info
+/.eggs
+
+# Binary tool
+server_config.pex
